grid gap fixes

--- a/src/modules/shared/components/Pagination/Pagination.module.scss
+++ b/src/modules/shared/components/Pagination/Pagination.module.scss
@@ -15,10 +15,10 @@
 
 .paginationList {
   display: flex;
+  flex-flow: wrap;
   flex-direction: row;
   gap: 8px;
   list-style: none;
-  flex-wrap: wrap;
 }
 
 .listItem {
