--- a/src/modules/shared/components/ProductsList/ProductsList.module.scss
+++ b/src/modules/shared/components/ProductsList/ProductsList.module.scss
@@ -6,10 +6,10 @@
 .productsList {
   grid-column: 1 / -1;
   display: grid;
-  column-gap: 16px;
+  gap: 40px;
+  grid-column-gap: 16px;
   grid-template-columns: repeat($grid-columns, 32px);
   padding-top: 24px;
-  row-gap: 40px;
 }
 
 .productCard {
